# libsyntactic

./: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.h  config.h.in  config.status  config_default.nn  configure  configure.ac  configure.scan  libtool  randoom.h  syntactic.cc  syntactic.h  tags  transfer_functions.cc  transfer_functions.h
docs/: README
docs/devel_docs/: annotated.html  classVVLayer-members.html  classVVLayer.html  classVVNetwork-members.html  classVVNetwork.html  classVVNeuron-members.html  classVVNeuron.html  classrandoom-members.html  classrandoom.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  randoom_8h-source.html  randoom_8h.html  syntactic_8h-source.html  syntactic_8h.html  transfer__functions_8h-source.html  transfer__functions_8h.html
docs/user_docs/: use_doc.html
test/: Makefile  xor  xor.cc  xor.in  xor.nnw
